# aimafia

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/: audio.py  db.py  models.py  mongo.py  transcribe.py
backend/api/: app.py  auth.py  games.py  jobs.py  routes.py
backend/llm/: __init__.py  diarization_improver.py  game_splitter.py  prompts.py  summarizer.py
frontend/: index.html
frontend/src/: App.css  App.tsx  google-gsi.d.ts  types.ts
frontend/src/api/: client.ts
frontend/src/components/: GameResults.tsx  JobProgress.tsx  LandingPage.css  LandingPage.tsx  PlayerAdvice.tsx  ResultsView.tsx  UrlInput.tsx
mafia_analyzer/: audio.py  cli.py  models.py  summarize.py  transcribe.py
mafia_analyzer/api/: app.py  jobs.py  routes.py
mafia_analyzer/llm/: diarization_improver.py  game_splitter.py  prompts.py  summarizer.py
