[project]
name = "mafia-analyzer"
version = "0.1.0"
description = "Analyze mafia game videos: extract audio, transcribe with diarization, summarize per player"
requires-python = ">=3.11"
dependencies = [
    "yt-dlp>=2024.0",
    "elevenlabs>=1.0",
    "anthropic>=0.40",
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sse-starlette>=2.0",
    "python-multipart>=0.0.7",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]
